Fixed Horizontal Scroll Bar Issue in the Summary Container

--- a/src/Popus.css
+++ b/src/Popus.css
@@ -10,7 +10,24 @@
     margin: 1rem auto;
     box-shadow: 0px 0px 0.625rem rgba(0, 0, 0, 0.1);
     position: relative;
-    overflow: hidden;
+    overflow: scroll;
+}
+
+#summaryContainer::-webkit-scrollbar {
+    /* width: 0.5rem; */
+    display: none;
+  }
+  
+#summaryContainer::-webkit-scrollbar-thumb {
+    /* background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 0.8rem; */
+    display: none;
+}
+
+#summaryContainer::-webkit-scrollbar-track {
+    /* height: 0.2rem;
+    background: transparent; */
+    display: none;
 }
 
 
